# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check_code.yml  check_project.yml  hexlet-check.yml
gendiff/: __init__.py  gendiff.py  get_data.py  get_diff.py  parser.py
gendiff/format/: json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff_script.py
tests/: test_generate_diff.py
tests/fixtures/: check_json_files_format_json.txt  check_json_format.txt  check_yaml.txt  file1.yaml  file2.yaml
