[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gaevskii.V <gaevskii.v95@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
